--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -2,7 +2,10 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="horizontal"
-    android:padding="16dp"
+    android:paddingStart="20dp"
+    android:paddingEnd="20dp"
+    android:paddingTop="16dp"
+    android:paddingBottom="16dp"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
@@ -10,7 +13,8 @@
         android:id="@+id/song_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textColor="@color/song_lyric"
+        tools:text="Dusk till dawn"
+        android:textColor="@color/black"
         android:textSize="17sp" />
 
 </LinearLayout>
