--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,40 +1,41 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Base.Theme.AppCompat.Light.DarkActionBar">
+    <style name="AppTheme" parent="Theme.MaterialComponents.Light.NoActionBar.Bridge">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="fontFamily">@font/nunito_regular</item>
     </style>
 
     <style name="AppTheme.Launcher">
         <item name="android:windowBackground">@drawable/launch_screen</item>
     </style>
 
-    <style name="title_style">
-        <item name="android:paddingTop">@dimen/dimen_8</item>
-        <item name="android:paddingBottom">@dimen/dimen_8</item>
-        <item name="android:textSize">19sp</item>
-        <item name="android:textColor">@android:color/white</item>
-        <item name="android:fontFamily">serif</item>
-        <item name="android:textAlignment">center</item>
-        <item name="android:background">@color/detail_title_background</item>
+
+    <style name="TextAppearance.App.Button" parent="TextAppearance.MaterialComponents.Button">
+        <item name="fontFamily">@font/nunito_bold</item>
+        <item name="android:fontFamily">@font/nunito_bold</item>
+        <item name="android:textSize">12sp</item>
     </style>
 
-    <style name="lyric_style">
-        <item name="android:paddingLeft">@dimen/dimen_8</item>
-        <item name="android:paddingRight">@dimen/dimen_8</item>
-        <item name="android:paddingTop">@dimen/dimen_16</item>
-        <item name="android:paddingBottom">@dimen/dimen_16</item>
-        <item name="android:textAlignment">center</item>
-        <item name="android:fontFamily">monospace</item>
-        <item name="android:lineSpacingExtra">4dp</item>
-        <item name="android:textSize">15sp</item>
-        <item name="android:textColor">#bdbdbd</item>
-        <item name="android:textIsSelectable">true</item>
+    <style name="TextAppearance.App.Toolbar" parent="TextAppearance.AppCompat.Widget.ActionBar.Title">
+        <item name="fontFamily">@font/nunito_bold</item>
+        <item name="android:fontFamily">@font/nunito_bold</item>
+        <item name="android:textSize">20sp</item>
     </style>
 
+
+    <style name="ThemeOverlay.App.TabLayout" parent="Widget.MaterialComponents.TabLayout">
+        <item name="tabMode">scrollable</item>
+        <item name="tabSelectedTextColor">@color/white</item>
+        <item name="tabTextColor">@color/dark_gray</item>
+        <item name="tabTextAppearance">@style/TextAppearance.App.Button</item>
+        <item name="fontFamily">@font/nunito_bold</item>
+        <item name="tabIndicator">@color/white</item>
+        <item name="tabBackground">@drawable/tab_selector</item>
+    </style>
 
 
 </resources>
